--- a/MyPlaces/Base.lproj/Main.storyboard
+++ b/MyPlaces/Base.lproj/Main.storyboard
@@ -11,18 +11,74 @@
         <scene sceneID="Dum-z4-4uY">
             <objects>
                 <tableViewController id="rYL-xJ-DIJ" customClass="TableViewController" customModule="MyPlaces" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="XOI-aU-Srn">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="85" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="XOI-aU-Srn">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="8SC-Jn-ARe">
-                                <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="8SC-Jn-ARe" customClass="CustomTableViewCell" customModule="MyPlaces" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="414" height="85"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="8SC-Jn-ARe" id="Fmm-xa-W0g">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="85"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Rxl-eW-f6i">
+                                            <rect key="frame" x="15" y="10" width="65" height="65"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="65" id="cuo-T6-DuB"/>
+                                                <constraint firstAttribute="height" constant="65" id="nVI-PF-00a"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ssl-vm-Mh3">
+                                            <rect key="frame" x="95" y="9" width="303" height="21"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="21" id="axw-r4-TwM"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="18"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Type" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fYK-oR-oUJ">
+                                            <rect key="frame" x="95" y="54" width="303" height="21"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="21" id="BRW-Yi-gn0"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="13"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uu1-3D-MR0">
+                                            <rect key="frame" x="95" y="35" width="315" height="18"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="18" id="15t-Yk-51Z"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="15"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="uu1-3D-MR0" firstAttribute="leading" secondItem="Rxl-eW-f6i" secondAttribute="trailing" constant="15" id="49X-Q3-CG0"/>
+                                        <constraint firstItem="Rxl-eW-f6i" firstAttribute="leading" secondItem="Fmm-xa-W0g" secondAttribute="leading" constant="15" id="7fz-rB-uxv"/>
+                                        <constraint firstItem="ssl-vm-Mh3" firstAttribute="leading" secondItem="Rxl-eW-f6i" secondAttribute="trailing" constant="15" id="BBG-oA-hAT"/>
+                                        <constraint firstItem="Rxl-eW-f6i" firstAttribute="centerY" secondItem="Fmm-xa-W0g" secondAttribute="centerY" id="FLL-bl-YuZ"/>
+                                        <constraint firstAttribute="trailing" secondItem="ssl-vm-Mh3" secondAttribute="trailing" constant="16" id="KJc-7H-Wrd"/>
+                                        <constraint firstItem="uu1-3D-MR0" firstAttribute="top" secondItem="ssl-vm-Mh3" secondAttribute="bottom" constant="5" id="SKI-C2-CSW"/>
+                                        <constraint firstAttribute="bottom" secondItem="fYK-oR-oUJ" secondAttribute="bottom" constant="10" id="YjD-1s-4ei"/>
+                                        <constraint firstItem="uu1-3D-MR0" firstAttribute="trailing" secondItem="Fmm-xa-W0g" secondAttribute="trailingMargin" constant="16" id="cXI-g9-6ie"/>
+                                        <constraint firstItem="fYK-oR-oUJ" firstAttribute="top" secondItem="uu1-3D-MR0" secondAttribute="bottom" constant="1" id="nP3-Cg-Ze7"/>
+                                        <constraint firstItem="fYK-oR-oUJ" firstAttribute="leading" secondItem="Rxl-eW-f6i" secondAttribute="trailing" constant="15" id="vU9-6H-huH"/>
+                                        <constraint firstItem="ssl-vm-Mh3" firstAttribute="top" secondItem="Fmm-xa-W0g" secondAttribute="top" constant="9" id="vjb-e9-5F0"/>
+                                        <constraint firstAttribute="trailing" secondItem="fYK-oR-oUJ" secondAttribute="trailing" constant="16" id="y5e-gp-ALI"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="imageOfPlace" destination="Rxl-eW-f6i" id="UiZ-H7-ziH"/>
+                                    <outlet property="locationLabel" destination="uu1-3D-MR0" id="jOS-IC-X3G"/>
+                                    <outlet property="nameLabel" destination="ssl-vm-Mh3" id="k5G-ex-Ew3"/>
+                                    <outlet property="typeLabel" destination="fYK-oR-oUJ" id="DE3-pG-r0i"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -34,7 +90,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Lgf-Ru-Ai4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="346" y="77"/>
+            <point key="canvasLocation" x="343.47826086956525" y="76.339285714285708"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="hed-sI-exn">
