--- a/MyPlaces/Base.lproj/Main.storyboard
+++ b/MyPlaces/Base.lproj/Main.storyboard
@@ -31,12 +31,25 @@
                                                     <rect key="frame" x="0.0" y="0.0" width="414" height="250"/>
                                                     <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="default"/>
                                                 </imageView>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TPJ-RF-TRc">
+                                                    <rect key="frame" x="344" y="189" width="50" height="50"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="50" id="aUD-eP-RvY"/>
+                                                        <constraint firstAttribute="height" constant="50" id="xVf-av-tzV"/>
+                                                    </constraints>
+                                                    <state key="normal" image="map"/>
+                                                    <connections>
+                                                        <segue destination="Vt4-7Y-ur5" kind="presentation" identifier="showMap" modalPresentationStyle="fullScreen" id="ge8-EQ-cRj"/>
+                                                    </connections>
+                                                </button>
                                             </subviews>
                                             <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
                                                 <constraint firstItem="T6Z-QS-oM9" firstAttribute="leading" secondItem="IbD-vr-6NG" secondAttribute="leading" id="9TI-bK-o2M"/>
                                                 <constraint firstItem="T6Z-QS-oM9" firstAttribute="top" secondItem="IbD-vr-6NG" secondAttribute="top" id="GJ4-3u-1Lj"/>
+                                                <constraint firstItem="TPJ-RF-TRc" firstAttribute="trailing" secondItem="IbD-vr-6NG" secondAttribute="trailingMargin" id="bZz-5d-7rr"/>
                                                 <constraint firstAttribute="bottom" secondItem="T6Z-QS-oM9" secondAttribute="bottom" id="rC2-JB-RDc"/>
+                                                <constraint firstItem="TPJ-RF-TRc" firstAttribute="bottom" secondItem="IbD-vr-6NG" secondAttribute="bottomMargin" id="seR-9R-atB"/>
                                                 <constraint firstAttribute="trailing" secondItem="T6Z-QS-oM9" secondAttribute="trailing" id="wu0-Bg-L3o"/>
                                             </constraints>
                                         </tableViewCellContentView>
@@ -196,6 +209,45 @@
                 <exit id="6Yd-WX-EZo" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="1207" y="86"/>
+        </scene>
+        <!--Map View Controller-->
+        <scene sceneID="pBo-UU-eXo">
+            <objects>
+                <viewController id="Vt4-7Y-ur5" customClass="MapViewController" customModule="MyPlaces" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Vtw-C7-xMh">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="4jm-CO-FLl">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                            </mapView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kHb-wN-tCb">
+                                <rect key="frame" x="344" y="84" width="30" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="30" id="dvz-DS-K6T"/>
+                                    <constraint firstAttribute="height" constant="30" id="wZP-s8-E8n"/>
+                                </constraints>
+                                <state key="normal" image="cancel"/>
+                                <connections>
+                                    <action selector="closeVS" destination="Vt4-7Y-ur5" eventType="touchUpInside" id="8Nn-pi-w7X"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="UXv-wy-cov" firstAttribute="trailing" secondItem="kHb-wN-tCb" secondAttribute="trailing" constant="40" id="4sj-b7-lPE"/>
+                            <constraint firstItem="4jm-CO-FLl" firstAttribute="top" secondItem="Vtw-C7-xMh" secondAttribute="top" id="7Oa-47-bMg"/>
+                            <constraint firstAttribute="bottom" secondItem="4jm-CO-FLl" secondAttribute="bottom" id="I2P-si-v7F"/>
+                            <constraint firstItem="kHb-wN-tCb" firstAttribute="top" secondItem="UXv-wy-cov" secondAttribute="top" constant="40" id="fz4-8X-yCO"/>
+                            <constraint firstItem="4jm-CO-FLl" firstAttribute="trailing" secondItem="UXv-wy-cov" secondAttribute="trailing" id="ot4-gn-aQC"/>
+                            <constraint firstItem="4jm-CO-FLl" firstAttribute="leading" secondItem="UXv-wy-cov" secondAttribute="leading" id="pss-GM-dJB"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="UXv-wy-cov"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="KHM-jt-MZw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2166.666666666667" y="89.732142857142847"/>
         </scene>
         <!--My Places-->
         <scene sceneID="4P1-jl-HVy">
@@ -376,8 +428,10 @@
     <resources>
         <image name="addPhoto" width="50" height="50"/>
         <image name="arrow.up.arrow.down" catalog="system" width="64" height="48"/>
+        <image name="cancel" width="52" height="52"/>
         <image name="emptyStar" width="40" height="40"/>
         <image name="filledStar" width="40" height="40"/>
+        <image name="map" width="72" height="72"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="w4n-dE-3HO"/>
